--- a/de.dlr.sc.virsat.model.extension.fosd.ui/build.properties
+++ b/de.dlr.sc.virsat.model.extension.fosd.ui/build.properties
@@ -1,9 +1,13 @@
-source.. = 	src/,\
-       		src-gen/,\
-       		xtend-gen
-output.. = 	target/classes/
-bin.includes =	META-INF/,\
-              	.,\
-				plugin.xml,\
-				resources/
+source.. = src/,\
+           src-gen/,\
+           xtend-gen,\
+           libs/
+output.. = target/classes/,\
+           bin/
+bin.includes = META-INF/,\
+               .,\
+               plugin.xml,\
+               resources/,\
+               libs/org.sat4j.core.jar
+jars.compile.order = .
 
