--- a/de.dlr.sc.virsat.model.extension.fosd/plugin.xml
+++ b/de.dlr.sc.virsat.model.extension.fosd/plugin.xml
@@ -21,6 +21,14 @@
 			id="de.dlr.sc.virsat.model.extension.fosd.SubFeatureRelationship"
 			caBean="de.dlr.sc.virsat.model.extension.fosd.model.SubFeatureRelationship">
 		</CategoryAssignmentBean>
+		<CategoryAssignmentBean
+			id="de.dlr.sc.virsat.model.extension.fosd.OptionalRelationship"
+			caBean="de.dlr.sc.virsat.model.extension.fosd.model.OptionalRelationship">
+		</CategoryAssignmentBean>
+		<CategoryAssignmentBean
+			id="de.dlr.sc.virsat.model.extension.fosd.CrossTreeConstraint"
+			caBean="de.dlr.sc.virsat.model.extension.fosd.model.CrossTreeConstraint">
+		</CategoryAssignmentBean>
 	</extension>
 	<extension point="de.dlr.sc.virsat.model.edit.ConceptTypeFactorySeiBeanRegistration">
 		<StructuralElementInstanceBean
